# creator-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt  CoreEntry.h  pch.h
engine/include/: Application.h  CoreMacros.h  Event.h  EventDispatcher.h  KeyCode.h  KeyboardEvent.h  Layer.h  LayerManager.h  Log.h  Window.h  WindowEvent.h
engine/include/UiPanels/: SplashLayer.h
engine/include/time/: CreatorTime.h
engine/platform/directx/include/: D3DContainer.h
engine/platform/directx/src/: D3DContainer.cpp
engine/platform/include/: DesktopWinWindow.h  OpenGlWindow.h  VulcanWindow.h
engine/platform/src/: DesktopWinWindow.cpp  OpenGlWindow.cpp  VulcanWindow.cpp
engine/src/: Application.cpp  Layer.cpp  LayerManager.cpp  Log.cpp  Window.cpp
engine/src/UiPanels/: SplashLayer.cpp
game/: CMakeLists.txt  GameApplication.cpp
game/Layers/: DebugUiLayer.cpp  DebugUiLayer.h
